# ChangeLog for eclass
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.36 2011/12/07 00:29:38 dirtyepic Exp $

  07 Dec 2011; Ryan Hill <dirtyepic@gentoo.org> toolchain.eclass:
  Disappear disappeared devs.

  05 Dec 2011; Mike Gilbert <floppym@gentoo.org> java-vm-2.eclass:
  Add semicolon to fix ferringb's last change.

  04 Dec 2011; Brian Harring <ferringb@gentoo.org> java-vm-2.eclass:
  Fix IFS=: bleeding out from java-vm_sandbox-predict invocations.

  03 Dec 2011; Ulrich Mueller <ulm@gentoo.org> elisp.eclass,
  elisp-common.eclass:
  Sync eclasses from Emacs overlay (revision 1759).
  elisp.eclass: Allow for user patches. New variable ELISP_REMOVE.
  elisp-common.eclass: Replace echo by ebegin/eend for proper logging.

  02 Dec 2011; Brian Harring <ferringb@gentoo.org> eutils.eclass:
  Fix eqawarn to match portage's return code; this fixes sporadic failures
  in alternate managers for packages like freetype that bleed the
  return code through.

  27 Nov 2011; Michał Górny <mgorny@gentoo.org> autotools-utils.eclass:
  Revert making pushd/popd fatal due to humongous breakage. Add a warning
  message instead.

  27 Nov 2011; Michał Górny <mgorny@gentoo.org> autotools-utils.eclass:
  Denote that autotools-utils must not be mixed with econf/emake.

  26 Nov 2011; Michał Górny <mgorny@gentoo.org> autotools-utils.eclass:
  Remove implicit IUSE=debug deprecation warning.

  26 Nov 2011; Michał Górny <mgorny@gentoo.org> autotools-utils.eclass:
  Add failure handling for pushd/popd calls.

  24 Nov 2011; Ralph Sennhauser <sera@gentoo.org> java-vm-2.eclass:
  set_java_env(): Substitute @SLOT@ in vm env files
  java-vm_check-nsplugin(): Fix handling of IUSE defaults

  24 Nov 2011; Maciej Mrozowski <reavertm@gentoo.org> virtuoso.eclass:
  Dependency on <gawk-4 moved to virtuoso-server-6.1.{2,3}.

  21 Nov 2011; Jory A. Pratt <anarchy@gentoo.org> nsplugins.eclass: