@@ -1,6 +1,12 @@
 # ChangeLog for eclass
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.36 2011/12/07 00:29:38 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.38 2011/12/10 17:28:16 pesa Exp $
+
+  10 Dec 2011; Davide Pesavento <pesa@gentoo.org> qt4-build.eclass:
+  Handle sparc64-* in arch configuration.
+
+  08 Dec 2011; Davide Pesavento <pesa@gentoo.org> qt4-build.eclass:
+  Update HOMEPAGE (bug #388133).
 
   07 Dec 2011; Ryan Hill <dirtyepic@gentoo.org> toolchain.eclass:
   Disappear disappeared devs.
